<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firefly_api_dictionaries14" />


            <LinearLayout
                android:id="@+id/llayout_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_seekBar_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/seekBar_white"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/firefly_api_dictionaries21"
            android:textColor="@color/red" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#EEEEEE" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch_infrared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firefly_api_dictionaries25" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_infrared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/firefly_api_dictionaries21"
            android:textColor="@color/red" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#EEEEEE" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <Switch
            android:id="@+id/switch_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firefly_api_dictionaries15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#EEEEEE" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <Switch
            android:id="@+id/switch_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firefly_api_dictionaries16" />
    </RelativeLayout>
</LinearLayout>