<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <RadioGroup
            android:id="@+id/idcard_mode_rg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/idcard_mode_rb_idcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_check"
                android:button="@null"
                android:checked="true"
                android:paddingLeft="13dp"
                android:paddingTop="6dp"
                android:paddingRight="13dp"
                android:paddingBottom="6dp"
                android:text="@string/testcase_idcard_rb_title_idcard"
                android:textColor="@drawable/radio_text_check" />

            <RadioButton
                android:id="@+id/idcard_mode_rb_idcard_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_check"
                android:button="@null"
                android:checked="false"
                android:paddingLeft="13dp"
                android:paddingTop="6dp"
                android:paddingRight="13dp"
                android:paddingBottom="6dp"
                android:text="@string/testcase_idcard_rb_title_idcard_uuid"
                android:textColor="@drawable/radio_text_check" />

            <RadioButton
                android:id="@+id/idcard_mode_rb_iccard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_check"
                android:button="@null"
                android:checked="false"
                android:paddingLeft="13dp"
                android:paddingTop="6dp"
                android:paddingRight="13dp"
                android:paddingBottom="6dp"
                android:text="@string/testcase_idcard_rb_title_iccard"
                android:textColor="@drawable/radio_text_check" />
        </RadioGroup>

        <TextView
            android:id="@+id/idcard_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/testcase_idcard_disconnect"
            android:textColor="@color/red" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#EEEEEE" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:id="@+id/lyt_idcard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/testcase_idcard_idcard_read_count"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/idcard_read_count"
                    android:layout_width="200dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/idcard_clear_log"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/firefly_api_dictionaries18"
                    android:textSize="20sp"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dip"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/idcard_head_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/idcard_default_head_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/testcase_idcard_idcard_read_message"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/idcard_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_idcard_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#12CAF8"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/testcase_idcard_idcard_read_uuid"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/idcard_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_iccard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="30dip"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/iccard_read_type"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/iccard_read_typea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/testcase_idcard_iccard_read_type_a"
                        android:textSize="22sp"
                        tools:ignore="HardcodedText" />

                    <View
                        android:layout_width="25sp"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/iccard_read_typeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/testcase_idcard_iccard_read_type_b"
                        android:textSize="22sp"
                        tools:ignore="HardcodedText" />
                </RadioGroup>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    tools:ignore="UselessLeaf">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firefly_api_dictionaries19"
                        android:textSize="22sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/iccard_id"
                        android:layout_width="450dp"
                        android:layout_height="50dp"
                        android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                        android:inputType="text"
                        android:textSize="22sp"
                        tools:ignore="LabelFor" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="580dp">

            <RelativeLayout
                android:layout_width="597dp"
                android:layout_height="396dp"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/read_card_area_bg">

                <ImageView
                    android:id="@+id/read_card_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@mipmap/read_card_area_ic" />

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>